--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,21 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RHYTHME 연구 프로젝트 | SoulSpectrum</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <div class="container">
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
     <section id="step1" class="step active">
         <h2 class="title">RHYTHME 연구 프로젝트</h2>
         <div class="research-intro">
-            본 연구는 <strong>음성 특징과 SQ(Systemizing Quotient)</strong>의 상관관계를 분석하여 신경다양성(ASD, ADHD 등) 특성을 정밀 프로파일링하는 것을 목적으로 합니다.
+            <p>본 연구는 <strong>(주)소울스펙트럼(SoulSpectrum Inc.)</strong>에서 주관하며, 
+            음성 특징과 SQ(Systemizing Quotient)의 상관관계를 분석하여 신경다양성 특성을 정밀 프로파일링하는 것을 목적으로 합니다.</p>
+            <p class="pi-info">연구책임자: 맹난영</p>
         </div>
         <button class="next-btn" onclick="nextStep()">연구 참여하기</button>
     </section>
@@ -16,48 +27,60 @@
             <label><input type="checkbox" class="essential"> 음성 데이터 수집 및 분석 동의 (필수)</label>
             <label><input type="checkbox" class="essential"> qEEG 데이터 정보 저장 동의 (필수)</label>
         </div>
-        <button class="next-btn" onclick="checkConsent()">동의 후 시작</button>
+        <button class="next-btn" onclick="nextStep()">동의 후 시작</button>
     </section>
 
     <section id="step3" class="step">
         <h3>기본 정보 입력</h3>
         <input type="text" id="nickname" placeholder="닉네임(익명 가능)">
         <input type="number" id="age" placeholder="만 나이">
-        <select id="gender"><option value="male">남성</option><option value="female">여성</option><option value="other">기타</option></select>
+        <div class="gender-group">
+            <label><input type="radio" name="gender" value="male" checked> 남성</label>
+            <label><input type="radio" name="gender" value="female"> 여성</label>
+            <label><input type="radio" name="gender" value="other"> 기타</label>
+        </div>
         
         <p class="label">해당하는 진단 정보 (중복 선택)</p>
         <div class="chip-group">
-            <div class="chip" onclick="toggleChip(this, 'ASD')">ASD</div>
-            <div class="chip" onclick="toggleChip(this, 'ADHD')">ADHD</div>
-            <div class="chip" onclick="toggleChip(this, 'HSP')">HSP</div>
-            <div class="chip" onclick="toggleChip(this, 'None')">해당 없음</div>
+            <div class="chip" onclick="toggleDiagnosis(this, 'ASD')">ASD</div>
+            <div class="chip" onclick="toggleDiagnosis(this, 'ADHD')">ADHD</div>
+            <div class="chip" onclick="toggleDiagnosis(this, 'HSP')">HSP</div>
+            <div class="chip" onclick="toggleDiagnosis(this, 'None')">해당 없음</div>
         </div>
         <button class="next-btn" onclick="validateStep3()">SQ 테스트 시작</button>
     </section>
 
     <section id="step4" class="step">
-        <div id="surveyGuide" class="guide-text"></div>
+        <div id="questionCount" class="step-indicator">1 / 10</div>
         <h3 id="questionText" class="question"></h3>
         <div class="answer-group">
-            <button class="ans-btn" onclick="saveAnswer(0)">전혀 아니다</button>
-            <button class="ans-btn" onclick="saveAnswer(1)">약간 그렇다</button>
-            <button class="ans-btn" onclick="saveAnswer(2)">상당히 그렇다</button>
-            <button class="ans-btn" onclick="saveAnswer(3)">매우 그렇다</button>
+            <button class="ans-btn" onclick="handleAnswer(0)">전혀 아니다</button>
+            <button class="ans-btn" onclick="handleAnswer(1)">약간 그렇다</button>
+            <button class="ans-btn" onclick="handleAnswer(2)">상당히 그렇다</button>
+            <button class="ans-btn" onclick="handleAnswer(3)">매우 그렇다</button>
         </div>
     </section>
 
     <section id="step5" class="step">
         <h3>qEEG 데이터 업로드 (선택)</h3>
-        <p class="desc">보유하신 qEEG 결과 파일이 있다면 업로드해 주세요.<br>(파일명과 데이터 유무 정보만 저장됩니다.)</p>
+        <p class="desc">보유하신 qEEG 결과 파일이 있다면 업로드해 주세요.<br>(파일명만 연구 데이터로 활용됩니다.)</p>
         <div class="file-upload">
             <input type="file" id="qeegFile" accept=".pdf,.jpg,.png,.txt">
         </div>
-        <button class="next-btn" onclick="nextStep()">최종 제출</button>
+        <button class="next-btn" onclick="submitAll()">최종 제출</button>
     </section>
 
     <section id="step6" class="step">
         <div class="success-icon">✅</div>
         <h2>참여해주셔서 감사합니다!</h2>
-        <p>전송된 데이터는 RHYTHME 연구의 소중한 자산이 됩니다.</p>
+        <p>전송된 데이터는 <strong>(주)소울스펙트럼</strong> 연구의 소중한 자산이 됩니다.</p>
     </section>
 </div>
+
+<footer class="admin-footer">
+    <p>&copy; 2024 SoulSpectrum Inc. All Rights Reserved.</p>
+</footer>
+
+<script src="app.js"></script>
+</body>
+</html>
