--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RHYTHME 연구 프로젝트 | SoulSpectrum</title>
+    <title> SQ와 프로소디 간 상관관계 연구 | SoulSpectrum</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
 
     <section id="step1" class="step active">
-        <h2 class="title">RHYTHME 연구 프로젝트</h2>
+        <h2 class="title">프로젝트-RHYTHME</h2>
         <div class="research-intro">
             <p>본 연구는 <strong>(주)소울스펙트럼(SoulSpectrum Inc.)</strong>에서 주관하며, 
             음성 특징과 SQ(Systemizing Quotient)의 상관관계를 분석하여 신경다양성 특성을 정밀 프로파일링하는 것을 목적으로 합니다.</p>
@@ -61,14 +61,28 @@
         </div>
     </section>
 
-    <section id="step5" class="step">
-        <h3>qEEG 데이터 업로드 (선택)</h3>
-        <p class="desc">보유하신 qEEG 결과 파일이 있다면 업로드해 주세요.<br>(파일명만 연구 데이터로 활용됩니다.)</p>
-        <div class="file-upload">
-            <input type="file" id="qeegFile" accept=".pdf,.jpg,.png,.txt">
-        </div>
-        <button class="next-btn" onclick="submitAll()">최종 제출</button>
-    </section>
+<section id="step5" class="step">
+    <h3 class="title">qEEG 업로드</h3>
+    <p class="description">보유하신 파일을 업로드해 주세요. (선택사항)</p>
+    
+    <div class="qeeg-box">
+        <span>EC (눈 감았을 때)</span>
+        <span id="ecStatus" class="qeeg-status">미첨부</span>
+    </div>
+    <input type="file" id="qeegEC" style="display:none" onchange="updateFileName('EC')">
+    <button class="next-btn file-btn" onclick="document.getElementById('qeegEC').click()">파일 선택 (EC)</button>
+
+    <div style="height: 12px;"></div>
+
+    <div class="qeeg-box">
+        <span>EO (눈 떴을 때)</span>
+        <span id="eoStatus" class="qeeg-status">미첨부</span>
+    </div>
+    <input type="file" id="qeegEO" style="display:none" onchange="updateFileName('EO')">
+    <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택 (EO)</button>
+
+    <button class="next-btn" style="margin-top: 40px;" onclick="submitAll()">최종 제출</button>
+</section>
 
     <section id="step6" class="step">
         <div class="success-icon">✅</div>
@@ -78,7 +92,7 @@
 </div>
 
 <footer class="admin-footer">
-    <p>&copy; 2024 SoulSpectrum Inc. All Rights Reserved.</p>
+    <p>&copy; 2026 SoulSpectrum Inc. All Rights Reserved.</p>
 </footer>
 
 <script src="app.js"></script>
