--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,43 @@
         <button class="next-btn" onclick="nextStep()">연구 참여하기</button>
     </section>
 
-   <section id="step2" class="step">
-    <button class="next-btn" onclick="agreeAll()">전체 동의 후 시작</button>
-    <div class="consent-box" style="margin-top: 24px;">
-        <div class="consent-item">
-            <input type="checkbox" id="c1" class="essential">
-            <label for="c1">개인정보 수집 및 이용 동의 (필수)</label>
+<section id="step2" class="step">
+    <button class="next-btn" id="agreeAllBtn" onclick="agreeAllWithEffect()">전체 동의 후 시작</button>
+    
+    <div class="consent-group" style="margin-top: 24px;">
+        <div class="consent-item" id="item1">
+            <div class="consent-header">
+                <input type="checkbox" class="essential" id="check1">
+                <label for="check1">개인정보 수집 및 이용 동의 (필수)</label>
+                <span onclick="toggleConsent(1)" style="color:#757575;">▼</span>
+            </div>
+            <div class="consent-content">
+                본 연구는 서비스 제공을 위해 최소한의 개인정보를 수집합니다. 수집된 정보는 연구 목적 외에 사용되지 않으며, 연구 종료 후 안전하게 파기됩니다...
+            </div>
         </div>
+
+        <div class="consent-item" id="item2">
+            <div class="consent-header">
+                <input type="checkbox" class="essential" id="check2">
+                <label for="check2">음성 데이터 수집 및 분석 동의 (필수)</label>
+                <span onclick="toggleConsent(2)" style="color:#757575;">▼</span>
+            </div>
+            <div class="consent-content">
+                참여자의 음성 특징 추출을 위한 데이터 수집에 동의합니다. 음성 원본은 식별할 수 없는 형태로 변환되어 분석되며, 보안 서버에 저장됩니다...
+            </div>
         </div>
+
+        <div class="consent-item" id="item3">
+            <div class="consent-header">
+                <input type="checkbox" class="essential" id="check3">
+                <label for="check3">qEEG 데이터 정보 저장 동의 (필수)</label>
+                <span onclick="toggleConsent(3)" style="color:#757575;">▼</span>
+            </div>
+            <div class="consent-content">
+                제공해주신 qEEG 파일명과 관련 정보는 연구의 대조군 데이터로 활용됩니다. 파일의 내용은 통계적 수치로만 활용되며 개인 식별은 불가능합니다...
+            </div>
+        </div>
+    </div>
 </section>
 
   <section id="step3" class="step">
@@ -58,10 +87,10 @@
        <label class="label">해당하는 진단 정보</label>
     <p class="description">중복 선택이 가능합니다.</p>
     <div class="chip-group">
-        <div class="chip" onclick="toggleDiagnosis(this, 'ASD')">ASD [cite: 79]</div>
-        <div class="chip" onclick="toggleDiagnosis(this, 'ADHD')">ADHD [cite: 79]</div>
-        <div class="chip" onclick="toggleDiagnosis(this, 'HSP')">HSP [cite: 79]</div>
-        <div class="chip" onclick="toggleDiagnosis(this, 'None')">해당 없음 [cite: 79]</div>
+        <div class="chip" onclick="toggleDiagnosis(this, 'ASD')">ASD</div>
+        <div class="chip" onclick="toggleDiagnosis(this, 'ADHD')">ADHD</div>
+        <div class="chip" onclick="toggleDiagnosis(this, 'HSP')">HSP</div>
+        <div class="chip" onclick="toggleDiagnosis(this, 'None')">해당 없음</div>
     </div>
 
     <button class="next-btn" style="margin-top: 40px;" onclick="validateStep3()">체계화 지수 SQ 테스트 시작</button>
@@ -99,7 +128,7 @@
             <span id="ecStatus" class="qeeg-status">미첨부</span>
         </div>
         <input type="file" id="qeegEC" style="display:none" onchange="updateFileName('EC')">
-        <button class="next-btn file-btn" onclick="document.getElementById('qeegEC').click()">파일 선택 (EC)</button>
+        <button class="next-btn file-btn" onclick="document.getElementById('qeegEC').click()">파일 선택</button>
     </div>
 
     <div style="height: 24px;"></div> <div class="upload-unit">
@@ -111,7 +140,7 @@
             <span id="eoStatus" class="qeeg-status">미첨부</span>
         </div>
         <input type="file" id="qeegEO" style="display:none" onchange="updateFileName('EO')">
-        <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택 (EO)</button>
+        <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택</button>
     </div>
 
     <button class="next-btn" style="margin-top: 40px;" onclick="submitAll()">최종 제출</button>
