--- a/public/index.html
+++ b/public/index.html
@@ -25,35 +25,34 @@
     
     <div class="consent-group" style="margin-top: 24px;">
         <div class="consent-item" id="item1">
-            <div class="consent-header">
-                <input type="checkbox" class="essential" id="check1">
-                <label for="check1">개인정보 수집 및 이용 동의 (필수)</label>
-                <span onclick="toggleConsent(1)" style="color:#757575;">▼</span>
+            <div class="consent-header" onclick="toggleConsent(1)">
+                <input type="checkbox" class="essential" id="check1" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">개인정보 수집 및 이용</span>
+                    <span class="badge">필수</span>
+                </div>
+                <span class="arrow" id="arrow1">▼</span>
             </div>
             <div class="consent-content">
-                본 연구는 서비스 제공을 위해 최소한의 개인정보를 수집합니다. 수집된 정보는 연구 목적 외에 사용되지 않으며, 연구 종료 후 안전하게 파기됩니다...
+                <p>• 수집항목: 닉네임, 나이, 성별, 진단 정보</p>
+                <p>• 이용목적: 연구 참여자 식별 및 통계 분석</p>
+                <p>• 보유기간: 연구 종료 후 즉시 파기</p>
             </div>
         </div>
 
         <div class="consent-item" id="item2">
-            <div class="consent-header">
-                <input type="checkbox" class="essential" id="check2">
-                <label for="check2">음성 데이터 수집 및 분석 동의 (필수)</label>
-                <span onclick="toggleConsent(2)" style="color:#757575;">▼</span>
+            <div class="consent-header" onclick="toggleConsent(2)">
+                <input type="checkbox" class="essential" id="check2" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">음성 데이터 수집 및 분석</span>
+                    <span class="badge">필수</span>
+                </div>
+                <span class="arrow" id="arrow2">▼</span>
             </div>
             <div class="consent-content">
-                참여자의 음성 특징 추출을 위한 데이터 수집에 동의합니다. 음성 원본은 식별할 수 없는 형태로 변환되어 분석되며, 보안 서버에 저장됩니다...
-            </div>
-        </div>
-
-        <div class="consent-item" id="item3">
-            <div class="consent-header">
-                <input type="checkbox" class="essential" id="check3">
-                <label for="check3">qEEG 데이터 정보 저장 동의 (필수)</label>
-                <span onclick="toggleConsent(3)" style="color:#757575;">▼</span>
-            </div>
-            <div class="consent-content">
-                제공해주신 qEEG 파일명과 관련 정보는 연구의 대조군 데이터로 활용됩니다. 파일의 내용은 통계적 수치로만 활용되며 개인 식별은 불가능합니다...
+                <p>• 수집항목: 발화 음성 녹음 데이터</p>
+                <p>• 이용목적: 프로소디(운율) 및 음성 특징 추출</p>
+                <p>• 보안: 음성 원본은 비식별 처리 후 암호화 저장</p>
             </div>
         </div>
     </div>
