--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,14 @@
                 <span class="arrow" id="arrow1">▼</span>
             </div>
             <div class="consent-content">
-                <p>• 수집항목: 닉네임, 나이, 성별, 진단 정보</p>
-                <p>• 이용목적: 연구 참여자 식별 및 통계 분석</p>
+                <p>수집항목: 닉네임, 나이, 성별, 진단 정보</p>이용목적: 연구 참여자 식별 및 통계 분석</p>
             </div>
         </div>
 
         </div>
 
     <button class="next-btn" style="background-color: #1E1E1E; color: #FFF; border: 1px solid #333;" onclick="checkAndGo()">
-        동의 완료 및 다음
+    다음
     </button>
 </section>
 
