--- a/public/index.html
+++ b/public/index.html
@@ -21,38 +21,68 @@
     </section>
 
 <section id="step2" class="step">
-    <button class="next-btn" id="agreeAllBtn" onclick="agreeAllWithEffect()">
-        전체 동의 후 시작
-    </button>
-    
+    <h3 class="title">연구 참여 동의</h3>
     <div class="consent-group">
-        <div class="consent-item" id="item1">
+        <div class="consent-item" id="parentalConsentItem" style="display: none;">
+            <div class="consent-header" onclick="toggleConsent('parent')">
+                <input type="checkbox" class="essential" id="checkParent" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">법정대리인 동의</span>
+                    <span class="badge">필수</span>
+                </div>
+                <a href="/terms-of-use/child" target="_blank" class="detail-link" onclick="event.stopPropagation()">전문보기</a>
+                <span class="arrow">▼</span>
+            </div>
+            <div class="consent-content">
+                <p>만 14세 미만 아동은 보호자의 동의가 반드시 필요합니다. 상세 내용은 '전문보기'를 확인해 주세요.</p>
+            </div>
+        </div>
+
+        <div class="consent-item">
             <div class="consent-header" onclick="toggleConsent(1)">
                 <input type="checkbox" class="essential" id="check1" onclick="event.stopPropagation()">
                 <div class="header-text">
                     <span class="subject">개인정보 수집 및 이용</span>
                     <span class="badge">필수</span>
                 </div>
-                <span class="arrow" id="arrow1">▼</span>
+                <a href="/terms-of-use/personal.txt" target="_blank" class="detail-link" onclick="event.stopPropagation()">전문보기</a>
+                <span class="arrow">▼</span>
             </div>
             <div class="consent-content">
-                <p>수집항목: 닉네임, 나이, 성별, 진단 정보</p>이용목적: 연구 참여자 식별 및 통계 분석</p>
+                <p>닉네임, 나이, 성별 및 삭제용 PIN 정보를 수집합니다. 상세 내용은 '전문보기'를 참조하세요.</p>
             </div>
         </div>
 
+        <div class="consent-item">
+            <div class="consent-header" onclick="toggleConsent(2)">
+                <input type="checkbox" class="essential" id="check2" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">음성정보 처리 동의</span>
+                    <span class="badge">필수</span>
+                </div>
+                <a href="/terms-of-use/voice" target="_blank" class="detail-link" onclick="event.stopPropagation()">전문보기</a>
+                <span class="arrow">▼</span>
+            </div>
+            <div class="consent-content">
+                <p>음성 원본은 저장되지 않으며 특징값만 추출됩니다. 상세 내용은 '전문보기'를 확인해 주세요.</p>
+            </div>
         </div>
-
-    <button class="next-btn" style="background-color: #1E1E1E; color: #FFF; border: 1px solid #333;" onclick="checkAndGo()">
-    다음
-    </button>
+    </div>
+    <button class="next-btn" onclick="checkAndGo()">동의 완료 및 다음</button>
 </section>
 
   <section id="step3" class="step">
     <h3 class="title">기본 정보 입력</h3>
     
     <div class="input-group">
-        <label class="label">성명</label>
-        <input type="text" id="nickname" placeholder="닉네임(익명 가능)">
+        <label class="label">닉네임</label>
+        <input type="text" id="nickname" placeholder="익명 가능합니다">
+    </div>
+
+    <div class="input-group">
+        <label class="label">비밀 PIN (4자리)</label>
+        <input type="password" id="userPin" maxlength="4" inputmode="numeric" placeholder="숫자 4자리 입력">
+        <p class="description" style="font-size: 11px; margin-top: 5px;">* 리포트 조회 및 데이터 삭제 시 반드시 필요합니다. 분실 시 복구가 불가능합니다.</p>
     </div>
 
     <div class="input-group last">
