--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <h3 class="title">연구 참여 동의</h3>
     <div class="consent-group">
         <div class="consent-item" id="parentalConsentItem" style="display: none;">
-            <div class="consent-header" onclick="loadAndToggleConsent('child', this)">
+            <div class="consent-header" onclick="loadAndToggleConsent('child.txt', this)">
                 <input type="checkbox" class="essential" id="checkParent" onclick="event.stopPropagation()">
                 <div class="header-text">
                     <span class="subject">법정대리인 동의</span>
@@ -60,7 +60,7 @@
         </div>
 
         <div class="consent-item">
-            <div class="consent-header" onclick="loadAndToggleConsent('voice', this)">
+            <div class="consent-header" onclick="loadAndToggleConsent('voice.txt', this)">
                 <input type="checkbox" class="essential" id="check2" onclick="event.stopPropagation()">
                 <div class="header-text">
                     <span class="subject">음성정보 처리 동의</span>
