모달 톤앤매너 추가

--- a/public/index.html
+++ b/public/index.html
@@ -175,6 +175,13 @@
     </section>
 </div>
 
+<div id="customModal" class="modal-overlay">
+    <div class="modal-content">
+        <p id="modalMessage"></p>
+        <button onclick="closeModal()" class="modal-btn">확인</button>
+    </div>
+</div>
+
 <footer class="admin-footer">
     <p>&copy; 2026 SoulSpectrum Inc. All Rights Reserved.</p>
 </footer>
