--- a/public/index.html
+++ b/public/index.html
@@ -177,8 +177,10 @@
 
 <div id="customModal" class="modal-overlay">
     <div class="modal-content">
-        <p id="modalMessage"></p>
-        <button onclick="closeModal()" class="modal-btn">확인</button>
+        <div class="modal-body">
+            <p id="modalMessage"></p>
+        </div>
+        <button onclick="closeModal()" class="modal-confirm-btn">확인</button>
     </div>
 </div>
 
