--- a/public/index.html
+++ b/public/index.html
@@ -184,10 +184,23 @@
     </div>
 </div>
 
+<div class="recorder-wrapper">
+    <svg width="200" height="200" viewBox="0 0 100 100">
+        <circle class="timer-bg" cx="50" cy="50" r="45" fill="none" stroke="#333" stroke-width="2" />
+        <circle id="timerLine" cx="50" cy="50" r="45" fill="none" stroke="#BB86FC" 
+                stroke-width="4" stroke-dasharray="283" stroke-dashoffset="0" 
+                transform="rotate(-90 50 50)" style="transition: all 0.1s linear;" />
+    </svg>
+    <div id="timer">40s</div>
+    <button id="recordBtn"><div id="recordIcon"></div>녹음 시작</button>
+</div>
+
 <footer class="admin-footer">
     <p>&copy; 2026 SoulSpectrum Inc. All Rights Reserved.</p>
 </footer>
 
-<script src="app.js"></script>
+<script type="module" src="voice-processor.js"></script>
+<script type="module" src="voice-ui.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
