음성테스트 UI 반영

--- a/public/index.html
+++ b/public/index.html
@@ -168,12 +168,46 @@
     <button class="next-btn" style="margin-top: 40px;" onclick="submitAll()">최종 제출</button>
 </section>
 
-    <section id="step6" class="step">
-        <div class="success-icon">✅</div>
-        <h2>참여해주셔서 감사합니다!</h2>
-        <p>전송된 데이터는 <strong>(주)소울스펙트럼</strong> 연구의 소중한 자산이 됩니다.</p>
-    </section>
-</div>
+<section id="step6" class="step">
+    <h3 class="title">음성 분석 테스트 안내</h3>
+    <div class="intro-box">
+        <p class="description">지금부터 목소리를 통한 심리 반응 테스트를 시작합니다.</p>
+        <ul class="guide-list">
+            <li>📍 각 문항은 최대 <strong>40초</strong>간 진행됩니다.</li>
+            <li>📍 질문을 읽고 준비가 되면 <strong>녹음 시작</strong>을 눌러주세요.</li>
+            <li>📍 녹음 직후 2초간은 정확한 측정을 위해 <strong>침묵</strong>을 유지해야 합니다.</li>
+        </ul>
+        <p class="hint-text">※ 원본 음성은 저장되지 않으며 수치 데이터만 익명 저장됩니다.</p>
+    </div>
+    <button class="next-btn" onclick="goToVoiceTest()">확인했습니다</button>
+</section>
+
+<section id="step6" class="step" style="display:none;">
+    <div class="stage-info">
+        <span id="stageBadge">Stage 1</span>
+        <h3 id="question" class="voice-title">질문을 불러오는 중...</h3>
+        <p id="desc" class="voice-desc"></p>
+    </div>
+
+    <div class="recorder-wrapper">
+        <svg width="200" height="200" viewBox="0 0 100 100">
+            <circle class="timer-bg" cx="50" cy="50" r="45" fill="none" stroke="#333" stroke-width="2" />
+            <circle id="timerLine" cx="50" cy="50" r="45" fill="none" stroke="#BB86FC" 
+                    stroke-width="4" stroke-dasharray="283" stroke-dashoffset="0" 
+                    transform="rotate(-90 50 50)" style="transition: all 0.1s linear;" />
+        </svg>
+        <div id="timer">40s</div>
+        <button id="recordBtn" class="record-btn">
+            <div id="recordIcon"></div>
+            <span>녹음 시작</span>
+        </button>
+    </div>
+    
+    <button id="skipBtn" class="skip-btn" style="display:none;">이 문항 건너뛰기</button>
+    <button id="nextBtn" class="next-btn" style="display:none;">다음 단계로</button>
+</section>
+
+
 
 <div id="customModal" class="modal-overlay">
     <div class="modal-content">
@@ -184,16 +218,7 @@
     </div>
 </div>
 
-<div class="recorder-wrapper">
-    <svg width="200" height="200" viewBox="0 0 100 100">
-        <circle class="timer-bg" cx="50" cy="50" r="45" fill="none" stroke="#333" stroke-width="2" />
-        <circle id="timerLine" cx="50" cy="50" r="45" fill="none" stroke="#BB86FC" 
-                stroke-width="4" stroke-dasharray="283" stroke-dashoffset="0" 
-                transform="rotate(-90 50 50)" style="transition: all 0.1s linear;" />
-    </svg>
-    <div id="timer">40s</div>
-    <button id="recordBtn"><div id="recordIcon"></div>녹음 시작</button>
-</div>
+
 
 <footer class="admin-footer">
     <p>&copy; 2026 SoulSpectrum Inc. All Rights Reserved.</p>
