모달 및 디자인

--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
         <div class="modal-body">
             <p id="modalMessage"></p>
         </div>
-        <button onclick="closeModal()" class="modal-confirm-btn">확인</button>
+        <button onclick="closeModal()" class="modal-btn">확인</button>
     </div>
 </div>
 
