--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,6 @@
                 <div class="consent-content"><div class="consent-text-area">내용을 불러오는 중...</div></div>
             </div>
             </div>
-        <button class="next-btn" onclick="checkAndGo()">동의 완료 및 다음</button>
     </section>
 
    <section id="step3" class="step">
@@ -87,10 +86,10 @@
         <div id="questionCount" class="step-indicator">1 / 10</div>
         <h3 id="questionText" class="question-title"></h3>
         <div class="answer-group">
-            <button class="ans-btn" onclick="handleAnswer(0)">전혀 아니다</button>
-            <button class="ans-btn" onclick="handleAnswer(1)">약간 그렇다</button>
-            <button class="ans-btn" onclick="handleAnswer(2)">상당히 그렇다</button>
-            <button class="ans-btn" onclick="handleAnswer(3)">매우 그렇다</button>
+<button class="ans-btn" onclick="handleAnswer(0, event)">전혀 아니다</button>
+<button class="ans-btn" onclick="handleAnswer(1, event)">약간 그렇다</button>
+<button class="ans-btn" onclick="handleAnswer(2, event)">상당히 그렇다</button>
+<button class="ans-btn" onclick="handleAnswer(3, event)">매우 그렇다</button>
         </div>
     </section>
 
@@ -136,7 +135,7 @@
     <div id="customModal" class="modal-overlay">
         <div class="modal-content">
             <div class="modal-body"><p id="modalMessage"></p></div>
-            <button onclick="closeModal()" class="modal-btn">확인</button>
+        <button onclick="closeModal()" class="modal-btn">확인</button>
         </div>
     </div>
 </div>
