--- a/public/index.html
+++ b/public/index.html
@@ -25,19 +25,61 @@
         </div>
     </section>
 
-    <section id="step2" class="step">
-        <h3 class="title">연구 참여 동의</h3>
-        <div class="consent-group">
-            <div class="consent-item" id="parentalConsentItem" style="display: none;">
-                <div class="consent-header" onclick="loadAndToggleConsent('child.txt', this)">
-                    <input type="checkbox" class="essential" id="checkParent" onclick="event.stopPropagation()">
-                    <div class="header-text"><span class="subject">법정대리인 동의</span><span class="badge">필수</span></div>
-                    <span class="arrow">▼</span>
+   <div class="button-group" style="margin-top: 40px;">
+        <button class="next-btn" onclick="startResearch(false)">14세 이상 연구 참여하기</button>
+        <button class="next-btn secondary-btn" style="margin-top: 16px;" onclick="startResearch(true)">
+            14세 미만 연구 참여하기 (보호자 동의 필요)
+        </button>
+    </div>
+</section>
+
+<section id="step2" class="step">
+    <h3 class="title">연구 참여 동의</h3>
+    <div class="consent-group">
+        <div class="consent-item" id="parentalConsentItem" style="display: none;">
+            <div class="consent-header" onclick="loadAndToggleConsent('child.txt', this)">
+                <input type="checkbox" class="essential" id="checkParent" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">법정대리인 동의</span>
+                    <span class="badge">필수</span>
                 </div>
-                <div class="consent-content"><div class="consent-text-area">내용을 불러오는 중...</div></div>
+                <span class="arrow">▼</span>
             </div>
+            <div class="consent-content">
+                <div class="consent-text-area">내용을 불러오는 중...</div>
             </div>
-    </section>
+        </div>
+
+        <div class="consent-item">
+            <div class="consent-header" onclick="loadAndToggleConsent('personal.txt', this)">
+                <input type="checkbox" class="essential" id="check1" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">개인정보 수집 및 이용</span>
+                    <span class="badge">필수</span>
+                </div>
+                <span class="arrow">▼</span>
+            </div>
+            <div class="consent-content">
+                <div class="consent-text-area">내용을 불러오는 중...</div>
+            </div>
+        </div>
+
+        <div class="consent-item">
+            <div class="consent-header" onclick="loadAndToggleConsent('voice.txt', this)">
+                <input type="checkbox" class="essential" id="check2" onclick="event.stopPropagation()">
+                <div class="header-text">
+                    <span class="subject">음성정보 처리 동의</span>
+                    <span class="badge">필수</span>
+                </div>
+                <span class="arrow">▼</span>
+            </div>
+            <div class="consent-content">
+                <div class="consent-text-area">내용을 불러오는 중...</div>
+            </div>
+        </div>
+    </div>
+    <button class="next-btn" onclick="checkAndGo()">동의 완료 및 다음</button>
+</section>
 
    <section id="step3" class="step">
     <h3 class="title">기본 정보 입력</h3>
