cors에 따른 설정 프론트 고침

--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
         <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택</button>
     </div>
 
-    <button class="next-btn" style="margin-top: 40px;" onclick="submitAll()">다음 - 음성분석</button>
+    <button class="next-btn" style="margin-top: 40px;" onclick="submitAll()">음성분석 시작</button>
 </section>
 
 
