버튼 이벤트 맞춤

--- a/public/index.html
+++ b/public/index.html
@@ -158,9 +158,14 @@
         <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택</button>
     </div>
 
-   <button type="button" id="uploadBtn" onclick="submitDataOnly()">데이터 전송</button>
+<button type="button" id="uploadBtn" class="next-btn" onclick="submitAll(event)">데이터 전송</button>
 
-<button type="button" id="nextStepBtn" onclick="location.href='voice_info.html'" style="display:none;">음성분석 안내 보기</button>
+<button type="button" id="nextStepBtn" class="next-btn secondary-btn"
+  onclick="location.href='voice_info.html'"
+  style="display:none;">
+  음성분석 안내 보기
+</button>
+
 </section>
 
 
