--- a/public/index.html
+++ b/public/index.html
@@ -163,11 +163,10 @@
 <button type="button" id="nextStepBtn" class="next-btn secondary-btn"
   onclick="location.href='voice_info.html'"
   style="display:none;">
-  음성분석 안내 보기
+  음성분석 이어하기
 </button>
 
 </section>
-
 
     <section id="step6" class="step">
         <h3 class="title">음성 분석 테스트 안내</h3>
