--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css">
   <title>음성 분석</title>
 </head>
 <body>
