--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -6,6 +6,189 @@
     <link rel="stylesheet" href="styles.css">
     <title>음성 분석</title>
 </head>
+<script type="module">
+  import { VoiceProcessor } from "./voice-processor.js";
+  import {
+    initStageUI,
+    setQuestionText,
+    setDescriptionText,
+    setTimer,
+    setRecordButtonState
+  } from "./voice-ui.js";
+
+  // ====== Stage 설계 (너가 준 문장 그대로 박음) ======
+  function getStagesByAge(age) {
+    const isUnder14 = age < 14;
+
+    const STAGE1_TEXT = `지금 나는 내 음성에 귀를 기울이고 있다. 
+
+글을 소리 내어 읽을 때는 세 가지를 지킨다: 
+
+첫째, 쉼표에서는 잠깐 쉰다. 둘째, 마침표에서는 숨을 고른다. 셋째, 눈은 글을 따라 천천히 내려간다
+
+매일 저녁 나는 오늘 있었던 일들을 체크한다.
+
+그 과정을 통해 숫자들와 친숙한 단어, 가끔은 낯선 단어들이 나의 하루에 녹아있다. 
+
+09:30, 12:10, 18:45
+
+기준, 예외, 패턴, 규칙
+
+기쁨, 아쉬움, 안도
+
+왜곡, 의외성, 잡념
+
+급하게 말하지 않고, 틀려도 괜찮다.  틀린 곳 부터 다시 이어서 읽는다. 
+
+끝까지 읽고 시간이 남으면 처음부터 다시 읽는다.`;
+
+    const STAGE4_Q = "노력을 해도 해결이 되지 않는다면 보통 어떻게 하나요?";
+
+    if (isUnder14) {
+      return [
+        {
+          id: 1,
+          q: "Stage 1",
+          d: "위 지문을 편안하게 소리 내어 읽어주세요. (Baseline 측정)",
+          text: STAGE1_TEXT
+        },
+        {
+          id: 2,
+          q: "Stage 2",
+          d: "게임/취미/코딩/만들기/학교/친구/반려동물 등 아무거나 좋아요. 무엇을 파고 있고 왜 그게 궁금한지 말해 주세요.",
+          text: "최근 2년 안에 내가 계속 파고 있는 주제(또는 해결하고 싶은 것)가 있다면 말해 주세요."
+        },
+        {
+          id: 3,
+          q: "Stage 3",
+          d: "검색, 실험, 연습, 도구 사용, 사람에게 물어보기 등 무엇이든 좋아요. 아직 진행 중이어도 괜찮아요.",
+          text: "내 관심주제를 더 많이 알거나 고민을 해결하려고 내가 해본 게 있나요?"
+        },
+        {
+          id: 4,
+          q: "Stage 4",
+          d: "",
+          text: STAGE4_Q
+        }
+      ];
+    }
+
+    // 14세 이상
+    return [
+      {
+        id: 1,
+        q: "Stage 1",
+        d: "위 지문을 편안하게 소리 내어 읽어주세요. (Baseline 측정)",
+        text: STAGE1_TEXT
+      },
+      {
+        id: 2,
+        q: "Stage 2",
+        d: "지금 생각중이거나 진행중인 일은 예상되는 결과를 말해주세요.",
+        text: "내가 발견한 문제 중 해결을 위해 노력한 것이 있다면  원인 → 해결방법→ 결과 순서로 짧게 설명해 주세요."
+      },
+      {
+        id: 3,
+        q: "Stage 3",
+        d: "",
+        text: "진행중이라면 가장 막히는 지점을, 완료한 일이라면 가장 어려웠던 지점을 설명해주세요"
+      },
+      {
+        id: 4,
+        q: "Stage 4",
+        d: "",
+        text: STAGE4_Q
+      }
+    ];
+  }
+
+  // ====== 상태 ======
+  const vp = new VoiceProcessor();
+  let stageIdx = 0;
+  let STAGES = [];
+
+  function renderStage() {
+    const s = STAGES[stageIdx];
+    if (!s) {
+      // 끝났으면 다음 화면(완료)로 넘기고 싶으면 여기서 처리
+      // location.href = "done.html";
+      return;
+    }
+
+    const badge = document.getElementById("stageBadge");
+    if (badge) badge.innerText = `Stage ${s.id}`;
+
+    // Stage 1은 voice-ui.js에 원문이 이미 있으면 initStageUI(1) 써도 되고,
+    // 지금은 "너가 준 문장"을 그대로 쓰는 쪽으로 통일
+    setQuestionText(s.text || s.q);
+    setDescriptionText(s.d || "");
+
+    // 타이머/버튼 초기화
+    setTimer(40000);
+    setRecordButtonState({ recording: false, calibrating: false });
+
+    const finishBtn = document.getElementById("finishBtn");
+    if (finishBtn) finishBtn.style.display = "none";
+  }
+
+  async function runVoiceStage() {
+    const recBtn = document.querySelector("#recordBtn");
+    const finishBtn = document.getElementById("finishBtn");
+
+    // UI: 캘리브레이션
+    setRecordButtonState({ recording: false, calibrating: true });
+    await vp.calibrateSilence(2);
+
+    // UI: 녹음 시작
+    setRecordButtonState({ recording: true, calibrating: false });
+    if (recBtn) recBtn.dataset.recording = "1";
+
+    if (finishBtn) {
+      finishBtn.style.display = "inline-block";
+      finishBtn.disabled = false;
+      finishBtn.onclick = () => {
+        vp.stop(); // ✅ 조기 종료
+        finishBtn.disabled = true;
+      };
+    }
+
+    const metrics = await vp.startStage({
+      durationSec: 40,
+      onTick: ({ leftMs }) => setTimer(leftMs, 40)
+    });
+
+    // 녹음 종료
+    if (recBtn) recBtn.dataset.recording = "0";
+    setRecordButtonState({ recording: false, calibrating: false });
+    if (finishBtn) finishBtn.style.display = "none";
+
+    // TODO: 여기서 metrics를 /submit-voice-stage로 POST 하면 됨(내일 붙여도 됨)
+
+    // 다음 stage로
+    stageIdx += 1;
+    renderStage();
+  }
+
+  // ====== 시작 ======
+  document.addEventListener("DOMContentLoaded", () => {
+    const age = parseInt(localStorage.getItem("rhythmi_age") || "0", 10);
+    STAGES = getStagesByAge(age);
+
+    renderStage();
+
+    const recBtn = document.querySelector("#recordBtn");
+    if (recBtn) {
+      recBtn.addEventListener("click", async () => {
+        if (recBtn.dataset.recording === "1") {
+          vp.stop();
+        } else {
+          await runVoiceStage();
+        }
+      });
+    }
+  });
+</script>
+
 <body>
     <div class="container">
         <div class="progress-container">
