스타일업데이트

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <h3 class="title">연구 참여 동의</h3>
     <div class="consent-group">
         <div class="consent-item" id="parentalConsentItem" style="display: none;">
-            <div class="consent-header" onclick="loadAndToggleConsent('child.txt', this)">
+            <div class="consent-header" onclick="loadAndToggleConsent('terms-of-use/child.txt', this)"
                 <input type="checkbox" class="essential" id="checkParent" onclick="event.stopPropagation()">
                 <div class="header-text">
                     <span class="subject">법정대리인 동의</span>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="consent-item">
-            <div class="consent-header" onclick="loadAndToggleConsent('personal.txt', this)">
+            <div class="consent-header" onclick="loadAndToggleConsent('terms-of-use/personal.txt', this)"
                 <input type="checkbox" class="essential" id="check1" onclick="event.stopPropagation()">
                 <div class="header-text">
                     <span class="subject">개인정보 수집 및 이용</span>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="consent-item">
-            <div class="consent-header" onclick="loadAndToggleConsent('voice.txt', this)">
+            <div class="consent-header" onclick="loadAndToggleConsent('terms-of-use/voice.txt', this)"
                 <input type="checkbox" class="essential" id="check2" onclick="event.stopPropagation()">
                 <div class="header-text">
                     <span class="subject">음성정보 처리 동의</span>
