--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -7,13 +7,16 @@
     <title>음성 분석 안내</title>
     <style>
         /* 추가적인 중앙 정렬 커스텀 스타일 */
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            text-align: center; /* 텍스트 중앙 정렬 */
-        }
+       body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;  /* 가로 중앙 */
+    justify-content: center; /* 세로 중앙 */
+    min-height: 100vh;
+    text-align: center;   /* 텍스트 중앙 */
+    background-color: #121212;
+    margin: 0;
+}
         .container {
             display: flex;
             flex-direction: column;
@@ -68,14 +71,18 @@
                 <label class="label">발성 및 태도</label>
                 <p class="description">일부러 목소리를 꾸미지 말고, 평소 지인과 대화하듯 가장 편안하고 자연스러운 목소리로 읽어주시는 것이 가장 좋습니다.</p>
             
-            <label class="label">2초 후 시작 </label>
-                <p class="description">로딩 시간을 감안하여 버튼을 누르시고 2초 후에 시작해 주세요.</p>
+            <label class="label">소음 감지 후 시작 </label>
+                <p class="description">버튼을 누르시고 2초 후에 시작해 주세요.</p>
             
             </div>
 
-            <div class="pi-info">
-                <p>※ 녹음 시작 버튼 클릭 시 '마이크 사용 권한' 허용 창이 뜨면 반드시 <strong>[허용]</strong>을 눌러주셔야 테스트가 가능합니다.</p>
-            </div>
+        <div class="pi-info" style="border-top: 1px solid #333; padding-top: 20px; margin-top: 24px;">
+    <div style="background: rgba(187, 134, 252, 0.1); border-radius: 8px; padding: 16px; border: 1px dashed #BB86FC;">
+        <p style="color: #BB86FC; font-size: 14px; font-weight: 700; margin: 0; line-height: 1.6; word-break: keep-all;">
+            ⚠️ 녹음 시작 버튼 클릭 시 '마이크 사용 권한' 허용 창이 뜨면 반드시 [허용]을 눌러주셔야 테스트가 가능합니다.
+        </p>
+    </div>
+</div>
         </main>
 
         <button id="goStage" class="next-btn" style="margin-top: 40px;">확인했습니다</button>
