--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -22,13 +22,13 @@ import {
     const isUnder14 = age < 14;
 
     const STAGE1_TEXT = `지금 나는 내 음성에 귀를 기울이고 있다.
-글을 소리 내어 읽을 때는 세 가지를 지킨다: <br>
+글을 소리 내어 읽을 때는 세 가지를 지킨다:
 첫째, 쉼표에서는 잠깐 쉰다. 
 둘째, 마침표에서는 숨을 고른다. 
 셋째, 눈은 글을 따라 천천히 내려간다
 
 매일 저녁 나는 오늘 있었던 일들을 체크한다.
-그 과정을 통해 숫자,친숙한 단어, 가끔은 낯선 단어들이 나의 하루에 녹아있다. <br>
+그 과정을 통해 숫자,친숙한 단어, 가끔은 낯선 단어들이 나의 하루에 녹아있다.
 
 09:30, 12:10, 18:45
 기준, 예외, 패턴, 규칙
