녹음 전용 테스트

--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -21,8 +21,7 @@ import {
   function getStagesByAge(age) {
     const isUnder14 = age < 14;
 
-    const STAGE1_TEXT = `지금 나는 내 음성에 귀를 기울이고 있다.
-글을 소리 내어 읽을 때는 세 가지를 지킨다:
+    const STAGE1_TEXT = `지금 나는 내 음성에 귀를 기울인다. 글을 소리 내어 읽을 때는 세 가지를 지킨다:
 첫째, 쉼표에서는 잠깐 쉰다. 
 둘째, 마침표에서는 숨을 고른다. 
 셋째, 눈은 글을 따라 천천히 내려간다
@@ -33,7 +32,7 @@ import {
 09:30, 12:10, 18:45
 기준, 예외, 패턴, 규칙
 기쁨, 아쉬움, 안도
-왜곡, 의외성, 잡념<br>
+왜곡, 의외성, 잡념
 
 급하게 말하지 않고, 틀려도 괜찮다.
 틀린 곳 부터 다시 이어서 읽는다. 
