--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -6,42 +6,73 @@
     <link rel="stylesheet" href="styles.css">
     <title>음성 분석 안내</title>
     <style>
-        /* 추가적인 중앙 정렬 커스텀 스타일 */
-       body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;  /* 가로 중앙 */
-    justify-content: center; /* 세로 중앙 */
-    min-height: 100vh;
-    text-align: center;   /* 텍스트 중앙 */
-    background-color: #121212;
-    margin: 0;
-}
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* 자식 요소 중앙 정렬 */
-            width: 100%;
-            max-width: 343px;
-        }
-        .guide-list {
-            list-style: none;
-            padding: 0;
-            margin: 24px 0;
-            text-align: left; /* 리스트 내용은 가독성을 위해 좌측 정렬 권장 */
-            width: 100%;
-        }
-        .guide-list li {
-            background: #1E1E1E;
-            border: 1px solid #333;
-            border-radius: 8px;
-            padding: 16px;
-            margin-bottom: 12px;
-            color: #A0A0A0;
-            font-size: 14px;
-            line-height: 1.6;
-        }
-    </style>
+   /* 전체 레이아웃을 화면 중앙으로 배치 */
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* 가로 중앙 */
+      justify-content: flex-start;
+      min-height: 100vh;
+      color: #fff;
+    }
+
+    /* 컨테이너가 왼쪽으로 쏠리지 않게 너비 고정 및 마진 자동 */
+    .container {
+      width: 100%;
+      max-width: 343px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* 내부 요소들 중앙 정렬 */
+      text-align: center;
+    }
+
+    /* 가이드 섹션 스타일 */
+    .guide-box {
+      width: 100%;
+      background: #1E1E1E;
+      border-radius: 12px;
+      padding: 24px;
+      margin: 24px 0;
+      text-align: left; /* 내용은 읽기 편하게 왼쪽 정렬 */
+    }
+
+    .guide-item {
+      margin-bottom: 20px;
+    }
+
+    .guide-item:last-child { margin-bottom: 0; }
+
+    .guide-title {
+      display: block;
+      color: #BB86FC;
+      font-weight: 700;
+      font-size: 15px;
+      margin-bottom: 6px;
+    }
+
+    .guide-desc {
+      color: #A0A0A0;
+      font-size: 13px;
+      line-height: 1.6;
+      margin: 0;
+    }
+
+    /* 보라색 강조 박스 (마이크 권한) */
+    .permission-alert {
+      width: 100%;
+      background: rgba(187, 134, 252, 0.1);
+      border: 1px dashed #BB86FC;
+      border-radius: 8px;
+      padding: 16px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body style="display: block;"> <div class="container">
         <div class="progress-container">
@@ -66,7 +97,7 @@
                 <p class="description">TV 소리나 대화 소리가 들리지 않는 조용한 독립된 공간에서 진행해 주셔야 분석 데이터의 오차가 줄어듭니다.</p>
 
                 <label class="label">마이크 거리 및 위치</label>
-                <p class="description">스마트폰이나 PC 마이크로부터 약 15~20cm 거리를 유지하고, 숨소리가 직접 들어가지 않도록 정면보다는 살짝 옆에서 말씀해 주세요.</p>
+                <p class="description">스마트폰을 추천하며 15~20cm 거리를 유지하고, 숨소리가 직접 들어가지 않도록 정면보다는 살짝 옆에서 말씀해 주세요.</p>
 
                 <label class="label">발성 및 태도</label>
                 <p class="description">일부러 목소리를 꾸미지 말고, 평소 지인과 대화하듯 가장 편안하고 자연스러운 목소리로 읽어주시는 것이 가장 좋습니다.</p>
